themes/hugobricks/static/css/header-footer.css
/* ... */
header .navnav > ul > li > ul {
    opacity: 0;
    transform: translateY(0.25rem);
    position: absolute;
    box-shadow: 0px 0px 1.5rem rgba(0,0,0,0.15);
    margin-left: -1rem;
    background: white;
    border-radius: 0.4rem;
    text-align: left;
    padding: 0.75rem 0 0.85rem;
    z-index: 99;
    transition: all 0.1s ease-in-out;
    pointer-events: none;
    display: block;
    font-size: 0.95rem;
}
header .navnav > ul > li > ul li a {padding: 0.3rem 2rem 0.3rem 1rem; font-weight: normal;}
header .navnav > ul > li > ul li a:hover,
header .navnav > ul > li > ul li.active a {color: var(--textDarker);}
header .navnav > ul > li > ul li.active a {font-weight: bold; font-size: 1rem; color: var(--textDark);}
header .navnav > ul > li:hover > ul {
    opacity: 1;
    transform: translateY(0);
    pointer-events: all;
}
header .navnav > ul > li.haschildren > a::after {
    content:""; 
    width: 0.3rem; 
    height: 0.3rem; 
    border: 0.1rem solid var(--textDarker); 
    border-left: 0; 
    border-top: 0;
    margin-left: 0.4rem;
    position: relative;
    bottom: 0.19rem;
    display: inline-block;
    transform: rotate(45deg);
}

header > .container {display: flex; align-items: center;}
header > .container > div {flex: 2; text-align: center;}
header > .container > div:first-child {flex: 1; text-align: left;}
header > .container.has_cta > div:nth-child(3) {flex: 1; text-align: right; display: flex; justify-content: flex-end; gap: 1rem; align-items: center;}
header > .container.has_cta > div:nth-child(3) > a > img {height: 1.25rem;}
header > .container.has_cta > div:nth-child(3) > a span.itemcount {
    position: absolute;
    font-size: 0.7rem;
    color: white;
    background: red;
    font-weight: bold;
    line-height: 1rem;
    height: 1rem;
    width: 1rem;
    text-align: center;
    border-radius: 100%;
    top: 50%;
    transform: translate(-0.6rem, -1rem);
    display: none;
}
header > .container.has_cta ul {justify-content: center;}
header + section.hasbackgroundcolor {margin-top: 0;}
header + section:not(.bgimage) {padding-top: 11rem!important;}
body.transparent_header header + section.bgimage .container {padding-top: 13.5rem!important;}
body:not(.transparent_header) header + section.bgimage .container {padding-top: 11.5rem!important;}
body:not(.transparent_header) header + section.bgimage .container h1:first-child {padding-top: 1.5rem;}
header .languages {display: inline-block;}
body.mobilemenu header .navnav {display: flex; flex-direction: column; justify-content: space-between;}
body.mobilemenu header .navnav.languages {display: none;}

header.dark {background: var(--textDarker);}
body.transparent_header header:not(.sticky) {background: transparent;}
header.dark a.logo, body.transparent_header header:not(.sticky) a.logo,
header.dark .navnav > ul > li > a, body.transparent_header header:not(.sticky) .navnav > ul > li > a {color: white;}
header.dark .navnav > ul > li::after, body.transparent_header header:not(.sticky) .navnav > ul > li::after {background: white;}
body.mobilemenu header .navnav > ul > li.haschildren > a::after,
header.dark .navnav > ul > li.haschildren > a::after, 
body.transparent_header header:not(.sticky) .navnav > ul > li.haschildren > a::after {border-color: white;}
header.dark #togglemenu span,
header.dark > .container.has_cta > div:nth-child(3) > a > img,
body.transparent_header header:not(.sticky) > .container.has_cta > div:nth-child(3) > a > img,
header.dark a.logo > div img.inline,
body.transparent_header header:not(.sticky) #togglemenu span,
body.transparent_header header:not(.sticky) a.logo > div img.inline {filter: invert(1)!important;}
header.dark + section.bgimage,
body.transparent_header header + section.bgimage {padding-top: 0!important;}
header .navnav.languages > ul > li > a {font-size: 0.9rem;}

/*------------------------*/
/* footer
/*------------------------*/

footer {background: var(--light); margin-top: 4rem; border-top: 0.1rem solid var(--light); color: var(--textMedium); }
footer a {text-decoration: none;}
footer .logo > div.has_subtitle {padding-bottom: 0.5rem;}
footer ul {display: flex; justify-content: center; gap: 0 2rem; margin: 0; flex-wrap: wrap;}
footer ul li {list-style: none; position: relative;}
footer ul li a {color: var(--textMedium); padding: 0.5rem 0; display: block;}
footer .container {display: flex; align-items: center;}
footer .container > div {flex: 3; text-align: center;}
footer .container > div:first-child {flex: 1; text-align: left;}
footer .container > div:last-child {flex: 1; text-align: right;}
footer .container > div:first-child:last-child {text-align: center;}
footer, footer > div:last-child a {color: var(--textMedium); text-decoration: none;}
footer .container {padding-top: 3rem; padding-bottom: 3rem;}
footer > div:last-child {border-top: 1px solid var(--borderLight); font-size: 0.9rem;}
footer > div:last-child .container {justify-content: center; padding-top: 1.7rem; padding-bottom: 1.75rem;}
footer ul.buttons {justify-content: flex-end; padding: 0;}
footer select {padding: 0; border: 0; background: transparent; border-radius: 0; color: var(--textMedium); font-size: 0.9rem;}
footer select option:not([disabled]) {color: initial;}
@media (max-width: 1000px) {
    footer .container {flex-direction: column; gap: 1rem; align-items: center;}
    footer ul {margin: 0.25rem 0 0.5rem;}
}

footer.dark {background: var(--textDark);}
footer.dark a.logo {color: white;}
footer.dark > div:last-child {border-top: 1px solid rgba(255,255,255,0.1);}
footer.dark select, footer.dark, footer.dark > div:last-child a, footer.dark ul li a {color: rgba(255,255,255,0.5);}
footer.dark ul.buttons.social .button {background: var(--accent);}
footer.dark a.logo img.inline {filter: invert(1)!important;}
footer.dark ul li a:not(.button)::after {background: rgba(255,255,255,0.5);}
/* ... */

